language/tools/move-unit-test/tests/test_sources/storage_on_error_empty_and_non_empty.storage.exp
Running Move unit tests
[ PASS    ] 0x1::A::a
[ PASS    ] 0x1::A::b
[ PASS    ] 0x1::A::c
[ FAIL    ] 0x1::A::x
[ FAIL    ] 0x1::A::y

Test failures:

Failures in 0x1::A:

┌── x ──────
│ error[E11001]: test failure
│   ┌─ tests/test_sources/storage_on_error_empty_and_non_empty.move:6:9
│   │
│ 5 │     fun x() {
│   │         - In this function in 0x1::A
│ 6 │         abort 0
│   │         ^^^^^^^ Test was not expected to abort but it aborted with 0 here
│ 
│ 
│ ────── Storage state at point of failure ──────
│ <empty>
└──────────────────


┌── y ──────
│ error[E11001]: test failure
│    ┌─ tests/test_sources/storage_on_error_empty_and_non_empty.move:12:9
│    │
│ 10 │     fun y(a: signer) {
│    │         - In this function in 0x1::A
│ 11 │         move_to(&a, A {});
│ 12 │         abort 0
│    │         ^^^^^^^ Test was not expected to abort but it aborted with 0 here
│ 
│ 
│ ────── Storage state at point of failure ──────
│ 0x1:
│ 	=> key 0x1::A::A {
│ 	    dummy_field: false
│ 	}
│ 
└──────────────────

Test result: FAILED. Total tests: 5; passed: 3; failed: 2
